--- a/index.html
+++ b/index.html
@@ -209,8 +209,10 @@ setLang(currentLang);
 
 <!-- 🔹 Footer -->
 <footer>
-Address Lebanon Baalbeck, Dar Alamal University Hospital, Engineer Abdullah Solh © 2026
+Address Lebanon Baalbeck, Dar Alamal University Hospital
+  Engineer Abdullah Solh © 2026
 </footer>
 
 </body>
 </html>
+
