Enhance footer with Instagram link and formatting
Updated footer to include Instagram link and improved formatting.

--- a/index.html
+++ b/index.html
@@ -209,10 +209,11 @@ setLang(currentLang);
 
 <!-- 🔹 Footer -->
 <footer>
-Address Lebanon Baalbeck, Dar Alamal University Hospital
-  Engineer Abdullah Solh © 2026
+  Address Lebanon Baalbeck, Dar Alamal University Hospital<br>
+  <a href="https://www.instagram.com/aestheticdaralamal" target="_blank">Instagram</a> <br>
+   Developed by Engineer Abdullah Solh © 2026<br>
 </footer>
+
 
 </body>
 </html>
-
