Update Instagram link in footer

--- a/products.html
+++ b/products.html
@@ -226,7 +226,7 @@ setLang(currentLang);
 <footer>
   Address Lebanon Baalbeck, Dar Alamal University Hospital<br>
   Engineer Abdullah Solh © 2026<br>
-  <a href="https://www.instagram.com/yourusername" target="_blank">📸 Instagram</a>
+  <a href="https://www.instagram.com/aestheticdaralamal" target="_blank">📸 Instagram</a>
 </footer>
 
 </body>
