--- a/services.html
+++ b/services.html
@@ -182,8 +182,9 @@ setLang(currentLang);
 <footer>
   Address Lebanon Baalbeck, Dar Alamal University Hospital<br>
   Engineer Abdullah Solh © 2026<br>
-  <a href="https://www.instagram.com/yourusername" target="_blank">📸 Instagram</a>
+  <a href="https://www.instagram.com/aestheticdaralamal" target="_blank">📸 Instagram</a>
 </footer>
 
 </body>
 </html>
+
